--- a/HTML5/HTML 5 Website with a responsive layout/index.html
+++ b/HTML5/HTML 5 Website with a responsive layout/index.html
@@ -17,15 +17,17 @@
         <!-- La diferenecia entre usar id y class es que id se usa cuando algo es único-->
         <!-- una clase es cuando se pondra una y otra vez, se van repitiendo -->
             <div class="container">
-                <h1> Acme web design                </h1>
+                <div id="branding">
+                    <h1> Acme web design                </h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                </ul>
-            </nav>
         </header>
 
 
